<resources>
    <string name="razor_pay_id">rzp_live_bMcUx337Ffwi3N</string>
    <string name="razor_pay_secret">89r9o36aqNp71GATjBtfXaWk</string>
    <string name="app_name">Adwait</string>
    <string name="facebook_app_id">305162560131651</string>
    <string name="loading">Please wait...</string>
    <string name="loading2">Please wait while Elves are setting\nup your account...</string>
    <string name="rupees">₹</string>
    <string name="close">Close</string>
    <string name="website_url">https://www.adwait.com</string>
    <string name="ok">Ok</string>
    <string name="update_now">Update Now</string>
    <string name="ngoname">Ngo</string>
    <string name="wishitem">Wish Item</string>
    <string name="subscription">Subscription</string>
    <string name="video">Video</string>
    <string name="wish_details">Wish Details</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="help1"> Get 100% visibility on your money.\nAnytime, Anywhere, Any Device</string>
    <string name="help2">Discover the joy of satellite parenting by\n ensuring psycho-emotional and physical well\n being of your mentee</string>
    <string name="help3">Ensuring happiness with our unique long term\n one-to-one Adwait mentorship program</string>
    <string name="help4">Get control of all contribution on your fingertips.\n All bills and it\'s break-ups at a single place.</string>
    <string name="reg_hint">We are APPsolutely happy!\n Let us know who is our new Elf.</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_num">Phone Number</string>
    <string name="dob">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="reff_code">Referral Code</string>
    <string name="referral_code">I have a referral code</string>
    <string name="ref_code_hint">Please enter your happiness code</string>
    <string name="congrats_heading">Congratulations!</string>
    <string name="congrats_1"><![CDATA[Thank you %s for being our Elf!<br>Your are eligible to be<br>an exclusive member of the <b>Hx Club.</b><br>We have credited 100 Happiness Points<br>in your account.
<br><br><b>#LimitlessHappiness</b>]]></string>
    <string name="done">Done</string>
    <string name="verify_hint"><![CDATA[Just one more step!\nWe believe in genuine Happiness]]></string>
    <string name="otp_to_mobile">Please enter OTP sent to your phone</string>
    <string name="resend">Resend</string>
    <string name="verify_mail">Please verify your e-mail</string>
    <string name="mail_resend">Click to resend link</string>
    <string name="forgot_1">Forgot your login details?</string>
    <string name="forgot_2">Get help signing in</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have a happiness account ?</string>
    <string name="password_reset">Please choose how you want to reset your password</string>
    <string name="via_phone">Via Phone</string>
    <string name="via_email">Via Email</string>
    <string name="enter_details">Enter details</string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="reset_password">Reset password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="email_success">Reset link has been sent to your email. Please login after password reset.</string>
    <string name="mobile_reset_success">Password has been reset. Login with new password</string>
    <string name="otp_sent">An OTP has been sent to your mobile number.</string>
    <string name="same_password">You have entered a password which has been used recently. Try again with new password</string>
    <string name="current_password_err">The current password entered is wrong. Try Forget password if you missed your password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello, Guest</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_menu">Menu</string>
    <string name="action_profile">Profile</string>
    <string name="swipe_to_contribute">Swipe to Contribute</string>
    <string name="sign_in_dash">Please sign to access this info</string>
    <string name="exit">Yes, quit</string>
    <string name="exit_message">Hey Elve %s.\n\nDo You Really want to leave the world of happiness?</string>
    <string name="new_version">An update is available in Playstore. Update now</string>
    <string name="update">Update</string>
    <string-array name="navigation_items">
        <item>Home</item>
        <item>My Mentee</item>
        <item>Be The Change</item>
        <item>Wish Corner</item>
        <item><![CDATA[H<sup>x</sup> Club]]></item>
        <item>My Contributions</item>
        <item>Our Partners</item>
        <item>Refer Happiness</item>
        <item>Our Cause</item>
        <item>Contact Us</item>
    </string-array>
    <string name="h_club"><![CDATA[H<sup>x</sup> Club]]></string>
    <string name="my_mentee">My Mentee</string>
    <string name="wish_cornor">Wish Corner</string>
    <string name="our_partner">Our Partners</string>
    <string name="be_the_change">Be the Change</string>
    <string name="our_cause">Our Causes</string>
    <string name="fund_raised_msg">Fund Raised: ₹%s of ₹ %s/%s</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="already_elve">Already an Elf!</string>
    <string name="profile_name">Name:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_contribution">Contribution this month:</string>
    <string name="profile_btn1">My Mentee</string>
    <string name="profile_btn2">My Contributions</string>
    <string name="profile_btn3">My Subscriptions</string>
    <string name="profile_btn4">Reset Password</string>
    <string name="profile_t_c">Terms &amp; Condition</string>
    <string name="profile_contact">Contact</string>
    <string name="profile_faq">FAQ</string>
    <string name="profile_save">Save</string>
    <string name="profile_edit">Update details</string>
    <string name="monthly_sub">Monthly subscription</string>
    <string name="last_contribution">Last contribution on :%s</string>
    <string name="cancel_sub">Cancel Subscription</string>
    <string name="no_subscription">You don\'t have any active subscriptions. \nClick here to subscribe</string>
    <string name="active_subscription">You have an active subscription with %s due(s).</string>
    <string name="logout">Log out</string>
    <string name="logout_message">Are you sure you want to Logout? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="subject_hint">Please Select a Subject</string>
    <string name="contact_header">Contact Us</string>
    <string name="contact_sub_header">Contact Us Through</string>
    <string name="contact_email">Email:</string>
    <string name="contact_care">Customer Care:</string>
    <string name="contact_sub_header2">Customer Support Form</string>
    <string name="name">Name</string>
    <string name="email_or_number">Email/Number</string>
    <string name="message">Message</string>
    <string name="contact_mail">info@adwait.in</string>
    <string name="contact_number">+918800882572</string>
    <string-array name="subjects">
        <item>Please select a subject</item>
        <item>Unable to make Payment</item>
        <item>Need more info about My Mentee</item>
        <item>Willing to donate for more</item>
        <item>Others</item>
    </string-array>
    <string-array name="partner_subject">
        <item>Please select a subject</item>
        <item>College/Universities Tie Up</item>
        <item>Corporate/Institutional Tie up</item>
        <item>Individual</item>
    </string-array>
    <string name="contact_success">Thank You for reaching us.\nOur team will get back to you shortly.</string>
    <string name="hx_heading">Happiness priority pass</string>
    <string name="hx_hint1">Welcome to the world of infinite happiness</string>
    <string name="hx_hint2">Start your Journey with Infinity</string>
    <string name="discover_benifits">Discover the benefits</string>
    <string name="click_here">Click here</string>
    <string name="point1">Invitations to local and regional level events as chapter head</string>
    <string name="point2"><![CDATA[Access to premium H<sup>x</sup> goodies]]></string>
    <string name="point3"><![CDATA[Special feature in H<sup>x</sup> talk series]]></string>
    <string name="point4">Stand a chance to win The Happiness Festival</string>
    <string name="referral_header">Refer and Earn</string>
    <string name="referral_t_c">Invite your friends to Adwait and share happiness together. For each friend you invite,
        both you and your friend will earn happiness points. T &amp; c
    </string>
    <string name="c_referral_code">Referral Code:</string>
    <string name="copy">Copy</string>
    <string name="c_share_via">Share via</string>
    <string name="your_earning">Your Earnings</string>
    <string name="c_refer_hint">Happiness points earned by you</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="others">Others</string>
    <string name="referral_message">Hey!! I have found a wonderful app to share happiness. Get it from https://play.google.com/store/apps/details?id=com.whatsapp Use my code %s to sign up and get happiness points. </string>
    <string name="quotes1">I alone cannot change the world, but \nI can cast a stone across the water to create many
        ripples \n- Mother Teresa
    </string>
    <string name="bethechange_hashtag">#BeTheChange</string>
    <string name="apply_for_vol">Apply for volunteering</string>
    <string name="be_our_elve">Be your our Elves</string>
    <string name="pledge_your_bday">Pledge Your Birthday</string>
    <string name="organise_event">Organise an Event</string>
    <string name="elve_talk">Elve Talk</string>
    <string name="campus_ambassdor">Be our Campus Ambassador</string>
    <string name="our_head">Become our Area Head</string>
    <string name="day_out">Adwait\'s Day Out</string>
    <string name="pledge_header">Pledge your birthday</string>
    <string name="pledge_header_ques">Pledge your birthday in just three steps!</string>
    <string name="pledge_hint">This year, donate your birthday to Adwait Foundation and give the gift of education and forever happiness to an underprivileged child.</string>
    <string name="date_of_bday">Date of Birth</string>
    <string name="pledge_content1">You pledge your birthday by sharing details on next page</string>
    <string name="pledge_content2">We create your customized birthday campaign for fundraising</string>
    <string name="pledge_content3">Let the world know by sharing the pledge and sending invitations. Simple!</string>
    <string name="pledge_content">It\’s easy to pledge your birthday. Just sign up with your DOB, then send a note to your family and friends with the news!</string>
    <string name="mentee_msg_hint">You\'re a caring Elf.</string>
    <string name="mentee_success_msg">We will inform you once we receive a \nreply from %s.</string>
</resources>