<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/rounded_white_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/verify_hint"
        android:textColor="@color/hint_text_color"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/otp_to_mobile"
        android:textColor="@color/hint_text_color"
        android:textSize="@dimen/small_text" />

    <TextView
        android:id="@+id/verify_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_pencil_edit"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/hint_text_color"
        android:textSize="@dimen/small_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/enter_otp"
        android:textColor="@color/hint_text_color"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padd_10"
            android:layout_marginEnd="@dimen/padd_10"
            app:cursorVisible="true"
            app:forceKeyboard="false"
            app:hint="0"
            app:inputType="number"
            app:password="true"
            app:pinBackground="@drawable/bottom_border"
            app:pinHeight="@dimen/pin_box"
            app:pinLength="6"
            app:pinWidth="@dimen/pin_box" />

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/resend"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/medium_text" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/verify_mail"
        android:textColor="@color/hint_text_color"
        android:textSize="@dimen/small_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/verify_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_pencil_edit"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/hint_text_color"
        android:textSize="@dimen/small_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/resend_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/mail_resend"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/medium_text"
        android:visibility="gone" />


    <Button
        android:id="@+id/final_submit"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_primary_color_bg"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/medium_text" />
</LinearLayout>