<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/reset_parent"
    android:background="@drawable/rounded_white_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/reset_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="10"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="10"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="10"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/password_submit"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_primary_color_bg"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_text" />

    </LinearLayout>

    <!--Progress Layout-->
    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/my_progress_indeterminate"
                android:layout_centerInParent="true"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/loading"
                android:textColor="@color/app_text"
                android:textSize="@dimen/medium_text" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>