<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_white_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:lines="1"
        android:padding="5dp"
        android:text="@string/mentee_msg_hint" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/destination"
            android:layout_toLeftOf="@+id/destination"
            android:src="@drawable/ic_message" />

        <ImageView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_destination" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/destination"
            android:layout_toRightOf="@+id/destination"
            android:src="@drawable/ic_man" />


    </RelativeLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/mentee_success_msg" />

    <Button
        android:id="@+id/done_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_primary_color_bg"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/medium_text" />

</LinearLayout>